--- a/playbooks/healthcheck.yml
+++ b/playbooks/healthcheck.yml
@@ -13,10 +13,20 @@
       command: mysql -e "SELECT 1"
       changed_when: false
       
+    - name: Show MySQL role
+      debug:
+        msg: "{{ inventory_hostname }} - Role: {{ mysql_role | default('unknown') }}"
+    
     - name: Check replication status (slaves)
       shell: mysql -e "SHOW SLAVE STATUS\G" | grep "Slave_.*_Running"
       when: inventory_hostname in groups['mysql_slave']
       changed_when: false
+      register: slave_status
+      
+    - name: Show slave replication status
+      debug:
+        msg: "{{ inventory_hostname }} - Replication: {{ slave_status.stdout_lines }}"
+      when: inventory_hostname in groups['mysql_slave']
 
 - name: Health Check - ProxySQL
   hosts: proxy
@@ -31,6 +41,15 @@
     - name: ProxySQL admin connection
       command: mysql -h127.0.0.1 -P6032 -uadmin -padmin -e "SELECT 1"
       changed_when: false
+      
+    - name: Check ProxySQL backend servers
+      shell: mysql -h127.0.0.1 -P6032 -uadmin -padmin -e "SELECT hostgroup_id,hostname,status FROM mysql_servers"
+      changed_when: false
+      register: proxysql_backends
+      
+    - name: Show ProxySQL backends
+      debug:
+        msg: "{{ proxysql_backends.stdout_lines }}"
 
 - name: Health Check - Redis
   hosts: redis_master:redis_slave
@@ -49,6 +68,11 @@
     - name: Check Redis role
       command: redis-cli role
       changed_when: false
+      register: redis_role_output
+      
+    - name: Show Redis role
+      debug:
+        msg: "{{ inventory_hostname }} - Role: {{ redis_role_output.stdout_lines[0] }}"
 
 - name: Health Check - Redis Sentinel
   hosts: redis_sentinel
@@ -63,20 +87,15 @@
     - name: Sentinel ping test
       command: redis-cli -p 26379 ping
       changed_when: false
-
-- name: Health Check - Zookeeper
-  hosts: zookeeper
-  gather_facts: no
-  tasks:
-    - name: Check Zookeeper service
-      systemd:
-        name: zookeeper
-        state: started
-      check_mode: yes
       
-    - name: Zookeeper status
-      command: /opt/zookeeper/bin/zkServer.sh status
+    - name: Check Sentinel master info
+      command: redis-cli -p 26379 SENTINEL master mymaster
       changed_when: false
+      register: sentinel_master
+      
+    - name: Show Sentinel master
+      debug:
+        msg: "{{ inventory_hostname }} - Monitoring master: {{ sentinel_master.stdout_lines }}"
 
 - name: Health Check - Kafka
   hosts: kafka
@@ -91,3 +110,14 @@
     - name: Check Kafka broker
       shell: netstat -tuln | grep 9092
       changed_when: false
+      
+    - name: Get Kafka broker info
+      shell: |
+        /opt/kafka/bin/kafka-broker-api-versions.sh --bootstrap-server localhost:9092 | head -1
+      changed_when: false
+      register: kafka_broker
+      ignore_errors: yes
+      
+    - name: Show Kafka broker
+      debug:
+        msg: "{{ inventory_hostname }} - Broker ID: {{ kafka_broker_id }} - Status: {{ 'UP' if kafka_broker.rc == 0 else 'DOWN' }}"
