--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -16,7 +16,17 @@ all:
               mysql_server_id: 2
               mysql_role: slave
               mysql_master_host: 192.168.100.135
-
+  # PostgreSQL HA Cluster (same servers as MySQL)
+    postgresql:
+      children:
+        postgresql_master:
+          hosts:
+            db-01:
+              ansible_host: 192.168.100.135
+        postgresql_slave:
+          hosts:
+            db-02:
+              ansible_host: 192.168.100.136
     # Redis HA Cluster
     redis:
       children:
