--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,4 +1,28 @@
 ---
+- name: Install prerequisites
+  apt:
+    name:
+      - wget
+      - gnupg
+      - lsb-release
+    state: present
+    update_cache: yes
+
+- name: Add PostgreSQL APT key
+  apt_key:
+    url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
+    state: present
+
+- name: Add PostgreSQL repository
+  apt_repository:
+    repo: "deb http://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main"
+    state: present
+    filename: pgdg
+
+- name: Update apt cache
+  apt:
+    update_cache: yes
+
 - name: Install PostgreSQL and dependencies
   apt:
     name:
@@ -7,7 +31,6 @@
       - python3-pip
       - python3-psycopg2
     state: present
-    update_cache: yes
 
 - name: Stop PostgreSQL service
   systemd:
