--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -2,23 +2,21 @@
 - name: Install prerequisites
   apt:
     name:
-      - wget
+      - curl
+      - ca-certificates
       - gnupg
-      - lsb-release
     state: present
     update_cache: yes
 
-- name: Add PostgreSQL APT key
-  shell: |
-    wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o /usr/share/keyrings/postgresql-archive-keyring.gpg
+- name: Add PostgreSQL GPG key
+  shell: curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
   args:
-    creates: /usr/share/keyrings/postgresql-archive-keyring.gpg
+    creates: /etc/apt/trusted.gpg.d/postgresql.gpg
 
 - name: Add PostgreSQL repository
-  apt_repository:
-    repo: "deb [signed-by=/usr/share/keyrings/postgresql-archive-keyring.gpg] http://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main"
-    state: present
-    filename: pgdg
+  shell: echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
+  args:
+    creates: /etc/apt/sources.list.d/pgdg.list
 
 - name: Update apt cache
   apt:
