--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -4,23 +4,16 @@
     name:
       - curl
       - ca-certificates
-      - gnupg
     state: present
     update_cache: yes
 
-- name: Add PostgreSQL GPG key
-  shell: curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
+- name: Install PostgreSQL repository
+  shell: |
+    curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o /usr/share/keyrings/postgresql-keyring.gpg
+    echo "deb [signed-by=/usr/share/keyrings/postgresql-keyring.gpg] http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" | tee /etc/apt/sources.list.d/pgdg.list
+    apt-get update
   args:
-    creates: /etc/apt/trusted.gpg.d/postgresql.gpg
-
-- name: Add PostgreSQL repository
-  shell: echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
-  args:
-    creates: /etc/apt/sources.list.d/pgdg.list
-
-- name: Update apt cache
-  apt:
-    update_cache: yes
+    creates: /usr/share/keyrings/postgresql-keyring.gpg
 
 - name: Install PostgreSQL and dependencies
   apt:
@@ -30,6 +23,7 @@
       - python3-pip
       - python3-psycopg2
     state: present
+    update_cache: yes
 
 - name: Stop PostgreSQL service
   systemd:
