--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -7,13 +7,20 @@
     state: present
     update_cache: yes
 
-- name: Install PostgreSQL repository
-  shell: |
-    curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o /usr/share/keyrings/postgresql-keyring.gpg
-    echo "deb [signed-by=/usr/share/keyrings/postgresql-keyring.gpg] http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" | tee /etc/apt/sources.list.d/pgdg.list
-    apt-get update
-  args:
-    creates: /usr/share/keyrings/postgresql-keyring.gpg
+- name: Add PostgreSQL APT repository key
+  apt_key:
+    url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
+    state: present
+
+- name: Add PostgreSQL repository
+  apt_repository:
+    repo: "deb https://apt.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main"
+    state: present
+    filename: pgdg
+
+- name: Update apt cache
+  apt:
+    update_cache: yes
 
 - name: Install PostgreSQL and dependencies
   apt:
@@ -23,7 +30,6 @@
       - python3-pip
       - python3-psycopg2
     state: present
-    update_cache: yes
 
 - name: Stop PostgreSQL service
   systemd:
